test/spec_vectors/type-subtyping/fail/module_65.wat
(module (type $a0 (sub (array i32))) (type $a1 (sub $a0 (array i64))))